--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '2'
 
 services:
   zookeeper:
-    image: saumitras01/zookeeper:v3.4.9
+    image: zookeeper
+    restart: always
     ports:
       - "2181:2181"
   
