--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,20 @@ version: '2'
 
 services:
   zookeeper:
-    image: zookeeper
-    restart: always
+    image: wurstmeister/zookeeper
     ports:
       - "2181:2181"
   
   kafka:
-    image: saumitras01/kafka:latest
+    image: wurstmeister/kafka
     ports:
       - "9092:9092"
     depends_on:
       - zookeeper
     environment:
       KAFKA_ADVERTISED_HOST_NAME: kafka
-      KAFKA_ADVERTISED_PORT: "9092"
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_PORT: 9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
